--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^5.15.11",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.2",
+    "geocode": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^1.0.0-alpha.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "use-places-autocomplete": "^4.0.1"
